src/objects/zqu__ProductRatePlan__c.object
<CustomObject>
    <description>The Rate Plan associated with a ZProduct.</description>
    <fields>
        <fullName>Available__c</fullName>
        <formula>IF (
    Is_Inventory_Managed__c,
    (VALUE(Capacity__c) &gt; Inventory_Held__c),
    TRUE
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_A_W__c</fullName>
        <formula>IF(Is_Inventory_Managed__c,
   Capacity__c &amp; &quot;/&quot; &amp; TEXT(VALUE(Capacity__c) - Inventory_Held__c) &amp; &quot;/&quot; &amp; TEXT(Waitlist_Count__c),
   &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C/A/W</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_in_num__c</fullName>
        <description>csp-2669: Added to handle rate plans with capacity</description>
        <formula>VALUE(Capacity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity in num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterations+Preservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Announcements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor(ette)Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed and Breakfasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boudoir Photographers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Salons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calligraphers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central &amp; South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceremony Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceremony Venues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance Lessons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensembles+Soloists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favors+Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Jewelry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>Applies to product types of Discount only.  Select the percentage discount that will be applied to all products in the invoice.</inlineHelpText>
        <label>Discount %</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Held__c</fullName>
        <inlineHelpText>The count of the inventory that is in use</inlineHelpText>
        <label>Inventory Held</label>
        <summaryForeignKey>Inventory__c.Product_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <description>CSP-225</description>
        <formula>zqu__EffectiveEndDate__c &lt; TODAY()</formula>
        <label>Is Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Inventory_Managed__c</fullName>
        <formula>BLANKVALUE(VALUE(Capacity__c), 0) &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Inventory Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>AK-Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best of Weddings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Central CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Palm Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Sacramento/Tahoe/Reno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Fran/Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Barbara/Ventura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN-Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-DC/MD/Northern VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dest Weddings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL-Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL-Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL-South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL-West Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA-Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA-Savannah/Coastal Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI-Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeymoons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA-Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID-Idaho</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Inventory_Available__c</fullName>
        <inlineHelpText>Don&apos;t rely on this field having a value, it&apos;s only used as a data placeholder while loading the Inventory visualforce report.</inlineHelpText>
        <label>Next Inventory Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Available__c</fullName>
        <description>If the value of Capacity__c is blank/null, set the return value of the formula to 1,000,000 so that the logic in the InventoryUtilities.IsInventoryAvailable method always determines that inventory is available. Otherwise, return the value of Capacity__c - Inventory_Held__c.</description>
        <formula>IF(Value(BlankValue(Capacity__c,&quot;0&quot;)) = 0,1000000,VALUE(Capacity__c) - Inventory_Held__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>TEXT(zqu__Product__r.ProductType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU_Rate_Plan_Name__c</fullName>
        <description>This field is used to retrieve the product rate plan for a given SPC</description>
        <formula>zqu__Product__r.zqu__SKU__c  &amp; &apos;-&apos; &amp;  Name</formula>
        <label>Product SKU - Rate Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingCutoffDate__c</fullName>
        <label>Selling Cutoff Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestJ__c</fullName>
        <formula>LEN(zqu__ProductRatePlanFullName__c)</formula>
        <label>Test J</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waitlist_Count__c</fullName>
        <label>Waitlist Count</label>
        <summaryFilterItems>
            <field>Waitlist__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Waitlist__c.Product_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__ActiveCurrencies__c</fullName>
        <description>A comma-separated list of 3-letter currency codes representing active currencies for this rate plan, e.g., &quot;USD, EUR, CAD, GBP&quot;.</description>
        <inlineHelpText>A comma-separated list of 3-letter currency codes representing active currencies for this rate plan, e.g., &quot;USD, EUR, CAD, GBP&quot;.</inlineHelpText>
        <label>Active Currencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Catalog_Sync_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product link to catalog sync history</description>
        <inlineHelpText>Product link to catalog sync history</inlineHelpText>
        <label>Catalog Sync History</label>
        <referenceTo>zqu__Catalog_Sync_History__c</referenceTo>
        <relationshipLabel>Product Rate Plans</relationshipLabel>
        <relationshipName>Product_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default rate plan for the related product</description>
        <inlineHelpText>Default rate plan for the related product</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>The Description of the Rate Plan.</description>
        <inlineHelpText>The Description of the Rate Plan.</inlineHelpText>
        <label>Description</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDateTEXT__c</fullName>
        <formula>TEXT(YEAR( zqu__EffectiveEndDate__c ) ) &amp; &apos;-&apos; &amp; TEXT(MONTH(zqu__EffectiveEndDate__c)) &amp; &apos;-&apos; &amp; TEXT(DAY(zqu__EffectiveEndDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveEndDateTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The Effective End Date of the Rate Plan.</description>
        <inlineHelpText>The Effective End Date of the Rate Plan.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDateTEXT__c</fullName>
        <formula>TEXT(YEAR( zqu__EffectiveStartDate__c ) ) &amp; &apos;-&apos; &amp; TEXT(MONTH(zqu__EffectiveStartDate__c)) &amp; &apos;-&apos; &amp; TEXT(DAY(zqu__EffectiveStartDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveStartDateTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The Effective Start Date of the Rate Plan.</description>
        <inlineHelpText>The Effective Start Date of the Rate Plan.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__Product__r.zqu__BillingEntity__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Price_Summary__c</fullName>
        <description>Field used in the QuickList component and populated at runtime to match the Quote&apos;s currency field.</description>
        <label>Price Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanFullName__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Rate Plans</relationshipLabel>
        <relationshipName>Product_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__SyncMessage__c</fullName>
        <description>Message for the Catalog Sync</description>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__SyncStatus__c</fullName>
        <label>Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syncing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__ZProduct__c</fullName>
        <description>The ZProduct associated with this Rate Plan.</description>
        <inlineHelpText>The ZProduct associated with this Rate Plan.</inlineHelpText>
        <label>ZProduct</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ZProduct__c.zqu__Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.zqu__Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Product Rate Plan</relationshipLabel>
        <relationshipName>ProductRatePlan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Rate Plan.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Rate Plan.</inlineHelpText>
        <label>ZuoraId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Rate Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>zqu__ZProduct__c</columns>
        <columns>NAME</columns>
        <columns>zqu__EffectiveStartDate__c</columns>
        <columns>zqu__EffectiveEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Main</fullName>
        <columns>zqu__ZProduct__c</columns>
        <columns>NAME</columns>
        <columns>Available__c</columns>
        <columns>zqu__Deleted__c</columns>
        <columns>zqu__EffectiveStartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__EffectiveStartDate__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Main</label>
    </listViews>
    <nameField>
        <label>Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_allow_expired_rate_plans</fullName>
        <active>false</active>
        <description>Don&apos;t allow new rate plans to be created in an expired state</description>
        <errorConditionFormula>AND(ISNEW(), 
(zqu__EffectiveEndDate__c &lt; TODAY()) 
)</errorConditionFormula>
        <errorDisplayField>zqu__EffectiveEndDate__c</errorDisplayField>
        <errorMessage>Product rate plan Effective End Date may not be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__StartDateMustBeforeEndDate</fullName>
        <active>true</active>
        <description>The Effective Start Date should be earlier than the Effective End Date.</description>
        <errorConditionFormula>zqu__EffectiveStartDate__c  &gt;=  zqu__EffectiveEndDate__c</errorConditionFormula>
        <errorMessage>The Effective Start Date should be earlier than the Effective End Date.</errorMessage>
    </validationRules>
</CustomObject>